--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -6,9 +6,9 @@
     <mat-toolbar><mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>
     </mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      @for(cat of (categories$ | async); track cat){
+        <a mat-list-item [routerLink]="['category', cat]">{{cat}}</a>
+      }
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -25,5 +25,6 @@
       <span>ecom</span>
     </mat-toolbar>
     <!-- Add Content Here -->
+     <router-outlet />
   </mat-sidenav-content>
 </mat-sidenav-container>
